----------------------------------------------------------------------
 OmegaT 4.0.0
----------------------------------------------------------------------
 34 Enhancements
  6 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
4.0.0 vs 3.6.0 update 2

  Implemented requests:

  - Allow searches across source, target simultaneously
  https://sourceforge.net/p/omegat/feature-requests/1185/

  - Flexible use of spellcheck (with and w/o locale) 
  https://sourceforge.net/p/omegat/feature-requests/455/

  - New team mode implementation
  https://sourceforge.net/p/omegat/feature-requests/1189/

  - Update LanguageTool to 3.3 
  https://sourceforge.net/p/omegat/feature-requests/970/

  - Dismiss auto-completer window after hitting right/left arrow keys
  https://sourceforge.net/p/omegat/feature-requests/1192/

  - Support prefix search for dictionary
  https://sourceforge.net/p/omegat/feature-requests/1124/

  - Support ssh-agent for git public key authentication 
  https://sourceforge.net/p/omegat/feature-requests/1126/

  - Put archive contents in self-titled root folder for all distributions
  https://sourceforge.net/p/omegat/feature-requests/1186/

  - Add action menus to panes
  https://sourceforge.net/p/omegat/feature-requests/1196/

  - Notify user when minimized panes have content 
  https://sourceforge.net/p/omegat/feature-requests/1197/

  - Add Segment Properties pane
  https://sourceforge.net/p/omegat/feature-requests/1198/

  - Emacs-style keyboard navigation in autocompleter
  https://sourceforge.net/p/omegat/feature-requests/1200/

  - Add GUI aligner tool
  https://sourceforge.net/p/omegat/feature-requests/1201/

  - Update Lucene to 5.2.1
  https://sourceforge.net/p/omegat/feature-requests/1203/

  - Apply aggressive font fallback to Search results
  https://sourceforge.net/p/omegat/feature-requests/1220/

  - Handle multiple selection in Project Files list context menu 