@@ -5,7 +5,7 @@
 
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2013 Didier Briel
-               2015 Didier Briel
+               2015-2016 Didier Briel
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -72,7 +72,7 @@ public class OpenXMLFilter extends AbstractFilter {
          Complete string when all options are enabled 
          Word
          "(document\\.xml)|(comments\\.xml)|(footnotes\\.xml)|(endnotes\\.xml)|(header\\d+\\.xml)
-         |(footer\\d+\\.xml)"
+         |(footer\\d+\\.xml)|(core\\.xml)"
          Excel 
          "|(sharedStrings\\.xml)|(comments\\d+\\.xml)" 
          PowerPoint 
@@ -103,6 +103,9 @@ public class OpenXMLFilter extends AbstractFilter {
         }
         if (options.getTranslateFooters()) {
             DOCUMENTS += "|(footer\\d+\\.xml)";
+        }
+        if (options.getTranslateDocumentProperties()) {
+            DOCUMENTS += "|(core\\.xml)";
         }
         DOCUMENTS += "|(sharedStrings\\.xml)";
         if (options.getTranslateExcelComments()) {
