@@ -2,7 +2,7 @@
  OmegaT 4.0.0
 ----------------------------------------------------------------------
  34 Enhancements
-  6 Bug fixes
+  7 Bug fixes
   0 Localisation updates
 ----------------------------------------------------------------------
 4.0.0 vs 3.6.0 update 2
@@ -132,6 +132,9 @@ to the wrong filter
 
   - When replacing the target text with a match, the number substitution
 could fail with duplicate numbers
+
+  - Word document properties are not translated
+  https://sourceforge.net/p/omegat/bugs/828/
 
 ----------------------------------------------------------------------
  OmegaT 3.6.0 update 2
